[gd_scene load_steps=10 format=2]

[ext_resource path="res://slime.gd" type="Script" id=1]
[ext_resource path="res://Sprites/slime-Sheet.png" type="Texture" id=2]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.737867, 0.588344, 0.67728 )

[sub_resource type="SphereShape" id=3]
radius = 0.606978

[sub_resource type="SphereShape" id=4]
radius = 6.23418

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="slime" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.271903, 0 )
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Area2" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="SlimeLauncher" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.968959, -0.247219, 0, 0.247219, 0.968959, -0.0115986, 0.784247, 0 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -0.00804584, 0, -0.999968, 0, 1, 0, 0.999968, 0, -0.00804584, 0, 0.30304, 0 )
pixel_size = 0.0525
texture = ExtResource( 2 )
hframes = 8
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="Area2" to="." method="_on_Area2_body_entered"]
[connection signal="body_exited" from="Area2" to="." method="_on_Area2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
